# recsys

./: LICENSE  README.md  pyproject.toml
notebooks/: discounted_sim.py  item_based_neighborhood.py  long_tail_impact.py  user_based_neighborhood_algo.ipynb  user_based_neighborhood_algo.py  z_score_based_predictions.py
notebooks/__marimo__/: discounted_sim.html
